--- a/src/blog/_quarto.yml
+++ b/src/blog/_quarto.yml
@@ -13,8 +13,8 @@ website:
       #  🏠 📮 👨🏽‍💻 🍎 🎤 📚
       - text: "Blog"
         href: index.qmd
-    # - text: Notes
-    #   file: notes/index.qmd
+      - text: Notes
+        file: ../md/index.html
     # - text: Hire Me
     #   href: https://parlance-labs.com/
     # - text: OSS
