--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
       # -------- Package for Pages --------
       - run: touch docs/.nojekyll
-      - uses: actions/upload-pages-artifact@v4 # v4 is required by deploy v4 :contentReference[oaicite:1]{index=1}
+      - uses: actions/upload-pages-artifact@v3
         with: { path: docs }
 
   deploy:
