--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,34 +23,34 @@ jobs:
       # -------- Quarto → Docusaurus (/md) --------
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-     
+
       # 1 – Install site dependencies
       - name: Install JS deps
-        working-directory: src/docusaurus          # <‑‑ updated
+        working-directory: src/docusaurus # <‑‑ updated
         run: npm ci
-      
+
       # 2 – Render Quarto docs into Docusaurus’ docs folder
       - name: Render Quarto docs
-        run: quarto render src/md                  # writes markdown into src/docusaurus/docs
-      
+        run: quarto render src/md # writes markdown into src/docusaurus/docs
+
       # 3 – Build the Docusaurus site
       - name: Build Docusaurus site
-        working-directory: src/docusaurus          # <‑‑ updated
-        run: npm run build                         # output → src/docusaurus/build
-      
+        working-directory: src/docusaurus # <‑‑ updated
+        run: npm run build # output → src/docusaurus/build
+
       # 4 – Copy the static HTML into the Pages bundle
       - name: Stage built docs
         run: rsync -a --delete src/docusaurus/build/ docs/md
 
       # -------- Optional extras --------
-      - uses: actions/setup-python@v5              # grab CPython from GitHub cache
+      - uses: actions/setup-python@v5 # grab CPython from GitHub cache
         with:
           python-version: "3.12"
 
-      - uses: astral-sh/setup-uv@v5                # install uv (fast package manager)
+      - uses: astral-sh/setup-uv@v5 # install uv (fast package manager)
 
       - name: Install Python deps via uv
-        run: uv pip install --system -r requirements.txt   # installs marimo & friends
+        run: uv pip install --system -r requirements.txt # installs marimo & friends
 
       - name: Export Marimo notebooks to WASM HTML
         run: |
@@ -63,6 +63,16 @@ jobs:
               mkdir -p "$out"
               marimo -y export html-wasm "$nb" -o "$out" --mode edit
             ' _ {}
+
+      # -------- Shinylive apps --------
+      - name: Export Shiny apps (Shinylive) to WASM HTML
+        run: |
+          mkdir -p docs/app
+          for dir in src/app/*/; do          # loop over each app directory
+            [ -d "$dir" ] || continue        # skip if no sub‑dirs match
+            name=$(basename "$dir")          # e.g. src/app/coolapp/ → coolapp
+            shinylive export "$dir" "docs/app/$name"
+          done
 
       # -------- Package for Pages --------
       - run: touch docs/.nojekyll
